Fixed layout issues for 'find by' section in menupage people for IE6 and 7

--- a/themes/wilma/css/ie6.css
+++ b/themes/wilma/css/ie6.css
@@ -120,6 +120,9 @@ ul#alpha-browse-individuals a {
 #individual-intro.person .individual-overview {
     clear: left;
 }
+#find-by {
+    width: 445px;
+}
 /* Fix for photo upload */
 #photoUploadForm {
     width: 320px;
